--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cloud_firestore: ^5.6.8
   crypto: ^3.0.6
   firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+
   flutter:
     sdk: flutter
   provider: ^6.1.5
