--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,17 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   intl: ^0.20.2
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/Logo.png"
+
 
 flutter:
   uses-material-design: true
